@@ -15,16 +15,16 @@ Article Layout
 >>> menu = browser.getControl(name='add_menu')
 >>> menu.displayValue = ['Article']
 >>> browser.open(menu.value[0])
+>>> browser.open('@@edit-metadata.html')
 >>> browser.getControl(name='form.year').value = '2007'
 >>> browser.getControl(name='form.volume').value = '2'
->>> browser.getControl(name='form.__name__').value = 'KFZ-Steuer'
 >>> browser.getControl(name='form.title').value = (
 ...     'EU <em>unterstuetzt</em> Stinker-Steuer')
 >>> browser.getControl('Ressort').displayValue = ['Deutschland']
 >>> browser.getControl(name='form.authors.0.').value = 'Hans Sachs'
 
 >>> browser.getControl('Layout').value = 'http://xml.zeit.de/online/2007/01/island'
->>> browser.getControl(name='form.actions.add').click()
+>>> browser.getControl('Apply').click()
 
 >>> browser.getLink('Checkin').click()
 >>> browser.getLink('View metadata').click()
