@@ -4,7 +4,9 @@ zeit.content.article changes
 2.9.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Articles are created without an addform now. A temporary file is created in
+  DAV and automatically checked out. Upon checkin the temporary file is updated
+  and renamed to the name given during editing the checked out article (#8080).
 
 
 2.9.1 (2010-08-09)
